--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,11 +15,18 @@
 
 	"onCreateCommand": "cp -n .env.example .env",
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "pip install -r requirements.txt"
+	"postCreateCommand": "pip install -r requirements.txt",
 	
 	// Configure tool-specific properties.
 	// "customizations": {},
 
+	"features": {
+		"ghcr.io/devcontainers/features/nvidia-cuda": {
+			"version": "latest",
+			"installCudnn": true,
+			"installNccl": true
+		}
+	}
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
 }
